Refactor series and tag data structure; add new LLM articles and images
- Updated series-data.json to format tags for better readability and added new articles on LLM-based agents and preference alignment.
- Modified tag-data.json to include new tags related to LLMs and their techniques.
- Created new markdown files for "LLM-based Agents: Single and Multi-Agent Systems" and "Preference Alignment: RLHF and DPO" with detailed content.
- Adjusted series order for existing LLM articles to maintain consistency.
- Added new images for the articles to enhance visual representation.
- Updated next.config.js to ignore ESLint errors during builds.

--- a/data/blog/llms-part-1.mdx
+++ b/data/blog/llms-part-1.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: 'This article provides an overview of Large Language Models (LLMs), LLMs evolution and the core concepts of LangChain - an open source framework for building applications based on LLMs.'
 image: '/static/images/resource/llms/part-1.png'
 series: 'LLMs'
-seriesOrder: 2
+seriesOrder: 4
 ---
 
 <TOCInline toc={props.toc} asDisclosure toHeading={3} />
@@ -106,7 +106,7 @@ Check out the next article for more details.
 
 ## Reference
 
-[1] Zhao, W. X., Zhou, K., Li, J., Tang, T., Wang, X., Hou, Y., ... & Wen, J. R. (2023). A survey of large language models. *arXiv preprint arXiv:2303.18223*.
+[1] Zhao, W. X., Zhou, K., Li, J., Tang, T., Wang, X., Hou, Y., Min, Y., Zhang, B., Zhang, J., Dong, Z., & others. (2023). A survey of large language models. _arXiv preprint arXiv:2303.18223_, 1(2).
 
 [2] [Introduction](https://python.langchain.com/v0.2/docs/introduction/)
 
