chore: minor update on article format

--- a/data/blog/from-transformer-to-llm.mdx
+++ b/data/blog/from-transformer-to-llm.mdx
@@ -218,15 +218,22 @@ However, several factors contribute to the relative infrequency of scaling encod
 - **Task Specificity**: The encoder-decoder architecture is specifically designed for certain tasks, such as machine translation, where there is a clear correspondence between input sentences and output sentences. In contrast, the goal of LLMs is to handle a wide variety of generative tasks like text completion and question-answering. LLMs need to be flexible enough to adapt to different types of prompts and generate coherent text without supervision.
 
 <div className="rounded-lg border-l-4 border-primary-500 bg-gray-50 p-2 dark:bg-gray-800">
-  <h4 className="text-lg font-bold text-primary-600 dark:text-primary-400">Quick Recap</h4>-
-  Encoder-only - **Masked language modeling**: These models predict missing words in a sentence. -
-  **Smaller & older models**: Despite being less complex, they are still effective for information
-  extraction (IE) tasks. - Decoder-only: - **Dominant approach to LLMs**: These models generate text
-  by predicting the next word in a sequence. - Encoder-decoder - **Self-attention and
-  cross-attention**: These models use both mechanisms to process input and output sequences. -
-  **Employed for tasks such as machine translation (MT)**: They are effective for tasks that require
-  understanding and generating text in different languages.
-</div>
+  <h4 className="text-lg font-bold text-primary-600 dark:text-primary-400">Quick Recap</h4>
+
+**Encoder-only:**
+
+- **Masked language modeling**: These models predict missing words in a sentence.
+- **Smaller & older models**: Despite being less complex, they are still effective for information extraction (IE) tasks.
+
+**Decoder-only:**
+
+- **Dominant approach to LLMs**: These models generate text by predicting the next word in a sequence.
+
+**Encoder-decoder:**
+
+- **Self-attention and cross-attention**: These models use both mechanisms to process input and output sequences.
+- **Employed for tasks such as machine translation (MT)**: They are effective for tasks that require understanding and generating text in different languages.
+  </div>
 
 ## 4. Model Alignment
 
